add jade template as default & update readme

--- a/generator/client/app/temp.html
+++ b/generator/client/app/temp.html
@@ -26,7 +26,7 @@
               <button class="btn btn-sm btn-info" ng-click="vm.edit(model._id)">
                 <i class="fa fa-pencil"></i>
               </button>
-              <button class="btn btn-sm btn-danger" ng-click="vm.deleteConfirm(model.name, model, model)">
+              <button class="btn btn-sm btn-danger" ng-click="vm.deleteConfirm(model.name, model)">
                 <i class="fa fa-trash"></i>
               </button>
             </span>
