--- a/generator/client/app/form/temp.form.html
+++ b/generator/client/app/form/temp.form.html
@@ -1,15 +1,30 @@
 <div class="row">
   <div class="col-md-12">
-    <form class="form-horizontal row-border" name="form" ng-submit="vm.save(form)" accessible-form novalidate>
-<% if(fields) { _.forEach(fields, function(field) { %>
-      <div class="form-group" ng-class="vm.getFormClass(form.<%= field.name %>)">
+    <form class="form-horizontal row-border" name="form" ng-submit="vm.save(form)" accessible-form novalidate><% if(fields) { _.forEach(fields, function(field) { %>
+      <div id="form-<%= field.name %>" class="form-group" ng-class="vm.getFormClass(form.<%= field.name %>)">
         <label class="col-md-3 control-label"><%= field.title %></label>
-        <div class="col-md-9">
-          <% if(field.input == 'textarea') { %>
-          <textarea name="<%= field.name %>" class="form-control" ng-model="vm.model.<%= field.name %>"<%= field.required === 'true' ? ' required': '' %>></textarea>
-          <% } else { %>
-          <input type="<%= field.input %>" name="<%= field.name %>" class="form-control" autocomplete="off" ng-model="vm.model.<%= field.name %>"<%= field.required === 'true' ? ' required': '' %> />
-          <% } %>
+        <div class="col-md-9"><% if(field.input == 'textarea') { %>
+          <textarea name="<%= field.name %>" class="form-control" ng-model="vm.model.<%= field.name %>"<%= field.required === 'true' ? ' required': '' %>></textarea><% } else if(field.input == 'date') { %>
+          <p class="input-group">
+            <input type="text" name="<%= field.name %>" class="form-control" ng-model="vm.model.<%= field.name %>" 
+              datepicker-popup="{{vm.datepicker.format}}"
+              datepicker-options="vm.datepicker.options" 
+              is-open="vm.datepicker.opened" 
+              min-date="vm.datepicker.minDate" 
+              date-disabled="vm.datepicker.disabled(date, mode)"
+              close-text="Close" />
+            <span class="input-group-btn">
+              <button type="button" class="btn btn-default" ng-click="vm.datepicker.open($event)">
+                <i class="glyphicon glyphicon-calendar"></i>
+              </button>
+            </span>
+          </p><% } else if(field.input == 'select') { %>
+          <select name="<%= field.name %>" class="form-control" ng-model="vm.model.<%= field.name %>" ng-options="o.value as o.title for o in vm.options"<%= field.required === 'true' ? ' required': '' %>></select><% } else if(field.input == 'radio') { %>
+          <div class="btn-group"><% _.forEach(field.options, function(option) { %>
+            <label class="btn btn-info" ng-model="vm.model.<%= field.name %>" btn-radio="<%= option.value %>" uncheckable><%= option.title %></label><% }) %>
+          </div>
+          <input type="hidden" name="<%= field.name %>" ng-model="vm.model.<%= field.name %>"<%= field.required === 'true' ? ' required': '' %> /><% } else { %>
+          <input type="<%= field.input %>" name="<%= field.name %>" class="form-control" autocomplete="off" ng-model="vm.model.<%= field.name %>"<%= field.required === 'true' ? ' required': '' %> /><% } %>
         </div>
         <div class="col-md-9 col-md-push-3" 
           ng-if="vm.isInteracted(form.<%= field.name %>)" 
